@@ -1,0 +1,5 @@
+drop database boradois_development;
+
+drop database boradois_production;
+
+drop database boradois_test;
